# wirex

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: Makefile
docs/source/: conf.py  index.rst  modules.rst  wirex.models.rate.rst  wirex.models.rst  wirex.models.spike.rst  wirex.rst
experiments/: __main__.py  experiment_result.py  graph_visualization.ipynb  mnist_experiment.py  mnist_notebook.ipynb  plan.md  similarity.py  similarity_experiment.py  skewed_experiment.py  uniform_experiment.py
experiments/randomdata/: __init__.py  coeffs.py  data.py  models.py
wirex/: __init__.py  __main__.py
wirex/models/: apr.py  bcm.py  coeffs.py  covariance.py  hebbian.py  hopfield.py  oja.py  ojas.py
wirex/models/rate/: __init__.py  apr.py  bcm.py  covariance.py  generalhebbian.py  hebbian.py  hopfield.py  oja.py
wirex/models/spike/: __init__.py
wirex/randomdata/: __init__.py
