[project]
name = "wirex"
version = "0.1.0"
description = "Hebbian associative memory models with jax"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.8",
    "equinox>=0.13.2",
    "jax[cuda12]>=0.8.1",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "einops>=0.8.1",
    "pyqt5>=5.15.11",
    "pytest>=9.0.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "matplotlib>=3.10.7",
    "sphinx>=9.0.4",
    "tqdm>=4.67.1",
]

[tool.pyright] 
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."

